# mumble-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  macos.sh  murmur.ini  public_servers.json
src/: cli.rs  config.rs  connection.rs  db.rs  embed.rs  lan.rs  lib.rs  local.rs  main.rs  public.rs  server.rs  tui.rs
src/ui/: client.rs  local_server.rs  log_view.rs  mod.rs  server.rs  servers.rs
tests/: cli.rs
