[package]
name = "mumble"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mumble-sys = { path = "./mumble-sys" }
tokio = { version = "1", features = ["full"] }
configparser = "1.0.0"
anyhow = "1.0"
rusqlite = "0.31"
rustls-pemfile = "2.0.0"
tokio-rustls = "0.26"
rustls = "0.23"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "mumble-server"
path = "src/bin/mumble-server.rs"
